--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/Home.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/Home.cshtml
@@ -3,10 +3,13 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/Admin_Layout.cshtml";
 }
-@if (!String.IsNullOrEmpty(ViewBag.ThongBao))
-{
+@{
+    var us = Session["Username"].ToString() + " đã đăng nhập Admin thành công";
+
+
 }
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
+<div class="d-sm-flex align-items-center justify-content-between mb-4" onload="thongbao()">
+    <input hidden id="detailadmin" value="@us" />
     <h1 class="h3 mb-0 text-gray-800">Thống Kê</h1>
     <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i>Generate Report</a>
 </div>
