--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
@@ -47,21 +47,41 @@
 <div class="ticket-top">
     @for (int i = 1; i < 12; i++)
     {
-        var dayy = DateTime.Today.AddDays(dm);
-        string dayte = dayy.ToString("dd-MM-yyyy");
-        string strday = dayy.ToString("dd");
-        int daysd = int.Parse(dayy.ToString("ddMM"));
-        string strMonth = dayy.ToString("MMMM");
-        string dayd = dayy.DayOfWeek.ToString();
-        <div class="ticket" @*href="~/Tomoca/Tickets?daysd=@dm1"*@>
-            <div class="item-day">
-                <span class="day-big" id="ngayto">@strday</span><br>
-                <span class="day-small">@strMonth</span>
+        if (i == 1)
+        {
+            var dayy = DateTime.Today.AddDays(dm);
+            string dayte = dayy.ToString("dd-MM-yyyy");
+            string strday = dayy.ToString("dd");
+            int daysd = int.Parse(dayy.ToString("ddMM"));
+            string strMonth = dayy.ToString("MMMM");
+            string dayd = dayy.DayOfWeek.ToString();
+            <div class="ticket" @*href="~/Tomoca/Tickets?daysd=@dm1"*@>
+                <div class="item-day item-daynow">
+                    <span class="day-big" id="ngayto">@strday</span><br>
+                    <span class="day-small">@strMonth</span>
+                </div>
+                <div class="item-day-l">
+                    @dayd
+                </div>
+            </div> }
+        else
+        {
+            var dayy = DateTime.Today.AddDays(dm);
+            string dayte = dayy.ToString("dd-MM-yyyy");
+            string strday = dayy.ToString("dd");
+            int daysd = int.Parse(dayy.ToString("ddMM"));
+            string strMonth = dayy.ToString("MMMM");
+            string dayd = dayy.DayOfWeek.ToString();
+            <div class="ticket" @*href="~/Tomoca/Tickets?daysd=@dm1"*@>
+                <div class="item-day">
+                    <span class="day-big" id="ngayto">@strday</span><br>
+                    <span class="day-small">@strMonth</span>
+                </div>
+                <div class="item-day-l">
+                    @dayd
+                </div>
             </div>
-            <div class="item-day-l">
-                @dayd
-            </div>
-        </div>
+        }
         dm++;
         dm1++;
     }
@@ -79,7 +99,7 @@
                 {
                     <div class="item">
                         <div class="pad15" style="margin-top:30px;">
-                            <img class="clickdeto" style="width: 100%; height: 100%;" src="@item.Movy.Image" />
+                            <img class="clickdeto" style="width: 100%; height: 100%; border-radius:5px;" src="@item.Movy.Image" />
                         </div>
                         <div class="pad151 font-pad">
                             @item.Movy.Title
