--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/choose.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/choose.cshtml
@@ -861,7 +861,8 @@
                                     <p class="bb">Auditorium 5</p>
                                 </li>
                                 <li onclick="" class="confirm2">
-                                    <p style="border: none;" class="cc">Next <img src="~/Content/image/Vector 2.png" alt=""></p>
+                                    @*layghe*@
+                                    <input style="background: #F0F0F0; border:none" placeholder="Your seats" class="tenghe" type="type" name="name" value="" />
                                 </li>
                             </ul>
                         </div>
