--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/Home.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/Home.cshtml
@@ -143,11 +143,11 @@
                 <h6 class="m-0 font-weight-bold text-primary" style="text-align:center">Đặt Vé</h6>
             </div>
             <div class="card-body">
-                @foreach (var item in ViewData["DSDatVe"] as List<User>)
+                @foreach (var item in ViewData["DSDatVe"] as List<Ticket>)
                 {
                     <div class="p-3  border-bottom-dark " style="background-color:#394380 ">
-                        <b> @item.Username </b>
-                        <b style="float:right"> @item.FirstName</b>
+                        <b> @item.User.Username </b>
+                        <b style="float:right"> @item.AmountSeats</b>
                     </div>
 
                 }
