--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Admin_Layout.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Admin_Layout.cshtml
@@ -20,6 +20,8 @@
     <!-- Custom user for this template-->
     <link href="~/Content/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet" />
     <link rel="shortcut icon" type="image/jpg" href="https://cdn.discordapp.com/attachments/747112750253342761/862756884268580894/T.png">
+    @RenderSection("css", false)
+    @RenderSection("scriptstren", required: false)
 </head>
 
 <body id="page-top">
