--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/MovieReview.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/MovieReview.cshtml
@@ -71,7 +71,7 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr class="body-content">
+                <tr class="body-content animate__animated animate__flipInX">
                     <th class="title-class">
                         <div style="width: 66px; height:100px; float:left;">
                             <img src="@item.Image" alt="film">
