--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Tomoca_Layout.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Tomoca_Layout.cshtml
@@ -99,7 +99,7 @@
                         <a class="white-a" href="https://tomoca.000webhostapp.com/">About Us</a>
                     </li>
                     <li>
-                        <a class="white-a" href="#">Site Index</a>
+                        <a class="white-a" href="https://mailtomoca.herokuapp.com/">Feedback</a>
                     </li>
                     <li>
                         <a class="white-a" href="#">Privacy Policy</a>
