--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/choose.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/choose.cshtml
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="zone3" style="padding-bottom: 100px; margin-bottom: 50px;">
-        <p class="choose-your-seat">4. Choose your seat</p>
+        <p style="margin-left: 368px;" class="choose-your-seat"><img src="https://img.icons8.com/emoji/24/000000/warning-emoji.png" />Confirm before choosing your seat</p>
         <img class="screen" src="~/Content/image/Screen.png" alt="">
         <div class="seatStructure">
 
